baml_language/crates/baml_tests/snapshots/simple_type_error/baml_tests__simple_type_error__01_lexer__definition_spans.snap
---
source: target/debug/build/baml_tests-8782d8c4267ae68a/out/generated_tests.rs
expression: output
---
Function "function"
Word "wrong_arity_definition"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "Foo_arity"
LParen "("
IntegerLiteral "1"
Comma ","
IntegerLiteral "2"
RParen ")"
RBrace "}"
Function "function"
Word "Foo_arity"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "x"
RBrace "}"
Function "function"
Word "missing_field_access"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "person"
Equals "="
Word "Person"
LBrace "{"
Word "name"
Colon ":"
Quote "\""
Word "Ada"
Quote "\""
RBrace "}"
Semicolon ";"
Word "person"
Dot "."
Word "age"
RBrace "}"
Class "class"
Word "Person"
LBrace "{"
Word "name"
Word "string"
RBrace "}"
