baml_language/crates/baml_tests/snapshots/simple_type_error/baml_tests__simple_type_error__01_lexer__simple_type_error.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
Function "function"
Word "Foo"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "1"
Plus "+"
Quote "\""
Word "foo"
Quote "\""
RBrace "}"
